# villa

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  e ps postgres-test  fix.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/middleware/: auth.py  rate_limit.py
api/routes/: clients.py  commands.py  health.py  reports.py  webhooks.py
core/: config.py  database.py  main.py  models.py  orchestrator.py  permissions.py
db/migrations/: 001_initial_schema.sql  002_stand_by_and_new_modules.sql  env.py  script.py.mako
db/migrations/versions/: 000_baseline.py  autonomy_001_seed_webxp_agency.py  client_os_001_add_tables.py  client_os_002_voyage_embeddings.py  vision_001_add_drive_folder_id.py
db/seeds/: clients_webxp.sql
docs/: client_os.md
integrations/: anthropic_client.py  google_ads.py  google_calendar.py  google_drive.py  google_sheets.py  inlead.py  kommo.py  meta_ads.py  n8n.py  vision_pipeline.py  whatsapp.py
memory/: decision_log.py  embeddings.py  feedback_loop.py  knowledge_base.py  working_memory.py
memory/autonomy/: __init__.py  proactive_scanner.py  reflection_loop.py
memory/client_os/: __init__.py  exceptions.py  narrative.py  schema.py  state.py
memory/risk/: __init__.py  risk_engine.py
modules/: base.py
modules/m01_roteiros/: agent.py  prompts.py  validators.py
modules/m02_relatorios/: agent.py  collectors.py  formatters.py  m02_agent.py
modules/m03_qualificacao/: agent.py  prompts.py  scoring.py
modules/m04_campanhas/: agent.py
modules/m05_agendamento/: agent.py
modules/m06_atendimento/: agent.py
modules/m07_retroalimentacao/: agent.py
modules/m08_onboarding/: agent.py
modules/m09_arquivos/: agent.py
modules/m10_smooth/: agent.py
modules/m11_hipoteses/: agent.py
modules/m12_alertas/: agent.py
modules/m14_suporte_mari/: agent.py
modules/m15_monitor_smooth/: agent.py
prompts/modules/: m01_roteiros.md  m02_relatorios.md  m03_qualificacao.md  m14_suporte_mari.md  m15_monitor_smooth.md
prompts/system/: orchestrator.md  webxp_identity.md
scheduler/: daily_routines.py  monitors.py  setup.py  triggers.py  weekly_routines.py
scripts/: migrate_embeddings_to_voyage.py
security/: anonymizer.py  audit_log.py  data_retention.py  encryption.py
tests/: conftest.py  homologacao.py
tests/integration/: test_kommo_contract.py  test_meta_contract.py
tests/memory/client_os/: conftest.py  test_narrative.py  test_state.py
tests/prompts/: test_m01_validator_output.py  test_m02_formatter_output.py
tests/unit/: test_base_module_client_os.py  test_identity_layer.py  test_m01_roteiros.py  test_m02_relatorios.py  test_m04_campanhas.py  test_m12_alertas.py  test_orchestrator_autonomy_routes.py  test_proactive_scanner.py  test_reflection_loop.py  test_risk_engine.py  test_vision_pipeline.py  test_working_memory.py
