[project]
name = "villa"
version = "0.1.0"
description = "Villa — Agente SaaS multi-modular para a WebXP Agency"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary — WebXP / Vitor Vilela"}
authors = [
  {name = "Vitor Vilela", email = "contato@seudominio.com.br"},
]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".git",
  "__pycache__",
  "db/migrations",
  "scripts",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
  "E501",   # linha muito longa — controlado pelo line-length acima
  "W293",   # whitespace em linha em branco — corrigir incrementalmente
  "UP017",  # datetime.UTC alias — adotar progressivamente
  "UP045",  # X | None — adotar progressivamente no código existente
  "I001",   # imports unsorted — corrigir incrementalmente no código existente
]

[tool.ruff.lint.isort]
known-first-party = ["core", "modules", "integrations", "memory", "scheduler", "security", "api"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]
addopts = """
  --strict-markers
  -ra
"""
markers = [
  "unit: testes unitários (sem banco, sem rede)",
  "integration: testes de integração (banco real de teste)",
  "prompts: validação de outputs do LLM",
  "slow: testes que demoram mais de 5s",
]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = [
  "core",
  "modules",
  "integrations",
  "memory",
  "scheduler",
  "security",
  "api",
]
omit = [
  "tests/*",
  "db/migrations/*",
  "scripts/*",
  "**/__init__.py",
  "**/conftest.py",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "pass",
  "\\.\\.\\.\\s*$",
]

[tool.coverage.html]
directory = "htmlcov"

# ── Alembic ──────────────────────────────────────────────────────────────────
[tool.alembic]
script_location = "db/migrations"
